# pandas_ods_reader

./: pyproject.toml
pandas_ods_reader/: __init__.py
pandas_ods_reader/parsers/: ods.py
