[tool.poetry]
name = "pandas-ods-reader"
version = "1.0.1"
description = "Read in .ods and .fods files and return a pandas.DataFrame."
authors = ["iuvbio <iuvbio@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/iuvbio/pandas_ods_reader"
keywords = ["data", "io", "pandas", "ods"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
]

[tool.poetry.dependencies]
#python = ">=3.9,<3.13"
python = "^3.13"
#ezodf = ">=0.3.2"
lxml = ">=5.3.0"
pandas = ">=2.2.3"

[tool.poetry.group.dev.dependencies]
black = ">=24.10.0"
pytest = ">=8.3.4"
pytest-cov = ">=6.0.0"
mypy = ">=1.14.1"
flake8 = ">=7.1.1"
pandas-stubs = ">=2.2.3.241126"
types-lxml = ">=2024.12.13"
commitizen = ">=4.1.0"
pre-commit = ">=4.0.1"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.1"
tag_format = "v$version"
version_files = ["pyproject.toml:version"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
